  - The minimal ArrivalBound interface.
  - The abstract class ArrivalBoundDispatch that applies the configured arrival boundings.
  - The abstract class AbstractArrivalBound holds member variables for the network and the configurations.
  All arrival bounds in de.uni_kl.cs.disco.nc.arrivalbounds extend AbstractArrivalBound, all but the sink-tree version also implement ArrivalBound.
* Merge Interface, Factory and Utils classes where possible:
  - CurvePwAffine, incl. DNC and MPA_RTC Curves.
  - LinearSegments.
  - Num and all its implementations.
* Disco (min,+)-algebraic operations:
  - Moved to new package de.uni_kl.cs.disco.minplus.dnc
  - All convolutions and deconvolutions are called via a dispatcher, MinPlusDispatch.java. 
  - Extension to manipulate MPA RTC curves with their native operations is not yet tested.
* CurvePwAffineUtilsDispatch was not a dispatcher but an utils class:
  - Renamed to CurvePwAffineUtils.
  - Made it an abstract class.
* LinearSegmentFactoryDispatch is not dispatching but a factory itself; renamed to LinearSegmentFactory.
* Merge of MinPlusInputChecks and MinPlusDispatch to MinPlus.

v2.4.0beta2 "Chimera" (2017-Aug-17)
-----------------------------------
* Interface and Dispatcher naming: interfaces do not have a suffix, dispatchers now suffixed with "Dispatch".
  - CurvePwAffineFactory renamed to CurvePwAffineFactoryDispatch 
  - CurvePwAffineFactoryInterface renamed to CurvePwAffineFactory
  - CurvePwAffineUtils renamed to CurvePwAffineUtilsDispatch
  - LinearSegmentFactory renamed to LinearSegmentFactoryDispatch
  - NumFactory renamed to NumFactoryDispatch
  - NumFactoryInterface renamed to NumFactory
  - NumUtils renamed to NumUtilsDispatch
  - NumUtilsInterface renamed to NumUtils
* Dispatch classes are all abstract now.
* Renamed OperatorInputChecks to MinPlusInputChecks.
* Made LinearSegmentUtils an abstract class (it only provides static methods). 